layout issues fixed
layout issues fixed

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -219,12 +219,12 @@ a:after {
 
 #headerwrap {
 	background: url(../img/header_bg.jpg) no-repeat center top;
-	margin-top: -50px;
+	margin-top: -9%;
 	padding-top:10%;
 	text-align:center;
 	background-attachment: fixed;
 	background-position: center center;
-	min-height: 63.5%;
+	min-height: 60.5%;
 	width: 100%;
 
     -webkit-background-size: 100%;
@@ -255,7 +255,7 @@ a:after {
 
 #headerwrap p {
 	color:#ffffff;
-	font-size: 25px;
+	font-size: 19px;
 	text-align: center;
 }
 
@@ -313,7 +313,7 @@ a:after {
 			font-size : 20px;
 		}
 		.item-form{
-			margin-top : 20%;
+			margin-top : 13%;
 		}
     }
 
@@ -321,7 +321,7 @@ a:after {
     @media only screen and (max-width : 480px) {
 		#headerwrap {
 			margin-top: 0px;
-			padding-top:15%;
+			padding-top:10%;
 		}
 		#postalSearch{
 			padding-top:35%;
@@ -335,7 +335,7 @@ a:after {
 			font-size : 20px;
 		}
 		.item-form{
-			margin-top : 20%;
+			margin-top : 13%;
 		}
     }
 
@@ -446,3 +446,9 @@ min-height : 79.5%;
 	   background: rgba(255, 255, 255, 0.8);
 	    box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
     }
+	
+	legend {
+		padding: 5px;
+		color: #FFFFFF;
+		background-color: #eb5c32;
+	}
